--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@coinbase/cbpay-js": "^1.9.0",
     "@web3modal/common": "3.6.0-8b4be6c6",
     "@web3modal/core": "3.6.0-8b4be6c6",
     "@web3modal/ui": "3.6.0-8b4be6c6",
