--- a/apps/laboratory/package.json
+++ b/apps/laboratory/package.json
@@ -20,12 +20,15 @@
     "@web3modal/ethers": "3.6.0-8b4be6c6",
     "@web3modal/ethers5": "3.6.0-8b4be6c6",
     "@web3modal/wagmi": "3.6.0-8b4be6c6",
+    "@tanstack/react-query": "^5.14.1",
     "framer-motion": "10.16.16",
     "next": "14.0.4",
     "next-auth": "4.24.5",
     "react-icons": "4.12.0",
     "siwe": "2.1.4",
-    "valtio": "1.11.2"
+    "valtio": "1.11.2",
+    "viem": "2.0.0-beta.15",
+    "wagmi": "2.0.0-beta.8"
   },
   "devDependencies": {
     "@playwright/test": "1.40.1",
