--- a/packages/wagmi1/package.json
+++ b/packages/wagmi1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web3modal/wagmi",
+  "name": "@web3modal/wagmi1",
   "version": "3.6.0-8b4be6c6",
   "type": "module",
   "main": "./dist/esm/exports/index.js",
