--- a/apps/laboratory/package.json
+++ b/apps/laboratory/package.json
@@ -27,7 +27,8 @@
     "react-icons": "4.12.0",
     "siwe": "2.1.4",
     "valtio": "1.11.2",
-    "viem": "2.0.0-beta.15"
+    "viem": "2.0.0-beta.15",
+    "wagmi": "2.0.0-beta.8"
   },
   "devDependencies": {
     "@playwright/test": "1.40.1",
