--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "packages/wallet",
     "packages/siwe",
     "packages/wagmi",
-    "packages/wagmi1",
     "packages/ethers",
     "packages/ethers5",
     "apps/*",
@@ -60,8 +59,10 @@
     "react-dom": "18.2.0",
     "turbo": "1.11.2",
     "typescript": "5.3.3",
-    "vite": "5.0.9",
-    "vitest": "1.0.4",
-    "vue": "3.3.11"
+    "viem": "1.20.3",
+    "vite": "5.0.10",
+    "vitest": "1.1.0",
+    "vue": "3.3.13",
+    "wagmi": "1.4.12"
   }
 }
