fix: conflicts after rebase

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "packages/wallet",
     "packages/siwe",
     "packages/wagmi",
+    "packages/wagmi1",
     "packages/ethers",
     "packages/ethers5",
     "apps/*",
