--- a/apps/laboratory/package.json
+++ b/apps/laboratory/package.json
@@ -20,7 +20,7 @@
     "@web3modal/ethers": "3.6.0-8b4be6c6",
     "@web3modal/ethers5": "3.6.0-8b4be6c6",
     "@web3modal/wagmi": "3.6.0-8b4be6c6",
-    "@tanstack/react-query": "^5.14.1",
+    "@tanstack/react-query": "5.14.1",
     "framer-motion": "10.16.16",
     "next": "14.0.4",
     "next-auth": "4.24.5",
