--- a/apps/laboratory/package.json
+++ b/apps/laboratory/package.json
@@ -27,8 +27,8 @@
     "react-icons": "4.12.0",
     "siwe": "2.1.4",
     "valtio": "1.11.2",
-    "viem": "2.0.0-beta.16",
-    "wagmi": "2.0.0-beta.9"
+    "viem": "2.0.0-rc.0",
+    "wagmi": "2.0.0-rc.0"
   },
   "devDependencies": {
     "@playwright/test": "1.40.1",
