--- a/package.json
+++ b/package.json
@@ -60,10 +60,8 @@
     "react-dom": "18.2.0",
     "turbo": "1.11.2",
     "typescript": "5.3.3",
-    "viem": "1.20.3",
     "vite": "5.0.10",
     "vitest": "1.1.0",
-    "vue": "3.3.13",
-    "wagmi": "1.4.12"
+    "vue": "3.3.13"
   }
 }
